GRAPH-126 Upgrade to Java 17 and Tinkerpop 3.7