@@ -5,6 +5,10 @@
 # Inject classpath. Without this gremlin-server doesn't load all the appropriate jars for the bulk loader.
 export CLASSPATH=$(cat /opt/classpath.txt)
 
+# Enable deep reflection for Java 17
+export ADD_OPENS="--add-exports java.base/sun.nio.ch=ALL-UNNAMED"
+export JAVA_OPTIONS="$JAVA_OPTIONS $ADD_OPENS"
+
 # Create trap that redirects a CTRL-C even into the stop_gremlin_server function.
 trap 'stop_gremlin_server' INT
 stop_gremlin_server() {
